--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel = "stylesheet" href = "css/main.css">
         <link rel= "stylesheet" href = "css/cube.css">
-        <script src = "/libraries/jquery.js"></script>
+        <script src = "libraries/jquery.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB10Aj7W330jXyK80bF-U3V0OXMyLm0zyY&sensor=false"></script>
         <script>
             oldshow = "";
