animations look way cooler in this configuration

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <script>
             prevSide = "";
             pageNavigation = {
-                map: {"script" : "views/whoshere.js", "view" : "views/whoshere.html", "css":".front" ,"cssTransition" : "show-front", "loaded" : false},
+                map: {"script" : "views/whoshere.js", "view" : "views/whoshere.html", "css":".back" ,"cssTransition" : "show-back", "loaded" : false},
                 login : {"script" : "views/login.js", "view" : "views/login.html", "css" : ".left", "cssTransition" : "show-left", "loaded" : false},
                 logout : {"script" : "views/logout.js", "view" : "views/logout.html", "css" : ".right", "cssTransition" : "show-right", "loaded" : false},
-                message : {"script" : "views/message.js", "view" : "views/message.html", "css" : ".top", "cssTransition" : "show-top", "loaded" : false},
+                message : {"script" : "views/message.js", "view" : "views/message.html", "css" : ".front", "cssTransition" : "show-front", "loaded" : false},
 
             }
             
