yeah, shadows is too much

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel = "stylesheet" href = "css/main.css">
         <link rel= "stylesheet" href = "css/cube.css">
         <script src = "libraries/jquery.js"></script>
-        <script src = "libraries/realshadow.js"></script>
+        <!--<script src = "libraries/realshadow.js"></script>-->
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB10Aj7W330jXyK80bF-U3V0OXMyLm0zyY&sensor=false"></script>
         <script>
             prevSide = "";
