--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             }
             
             $(function(){
-                $("figure").realshadow();
+                //$("figure").realshadow();
                 $("#login").click(function(){
                     $("#message").html("please login");
                    show("login");
