--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel= "stylesheet" href = "css/cube.css">
         <link rel= "stylesheet" href = "css/cubeanimations.css">
         <script src = "libraries/jquery.js"></script>
+        <script src = "libraries/Point.js"></script>
+        <script src = "libraries/asteroid.js"></script>
         <script src = "libraries/draw.js"></script>
         <!--<script src = "libraries/realshadow.js"></script>-->
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB10Aj7W330jXyK80bF-U3V0OXMyLm0zyY&sensor=false"></script>
@@ -15,7 +17,6 @@
                 login : {"script" : "views/login.js", "view" : "views/login.html", "css" : ".left", "cssTransition" : "show-left", "loaded" : false},
                 logout : {"script" : "views/logout.js", "view" : "views/logout.html", "css" : ".right", "cssTransition" : "show-right", "loaded" : false},
                 message : {"script" : "views/message.js", "view" : "views/message.html", "css" : ".front", "cssTransition" : "show-front", "loaded" : false},
-
             }
             
             $(function(){
