--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel= "stylesheet" href = "css/cubeanimations.css">
         <script src = "libraries/jquery.js"></script>
         <script src = "libraries/Point.js"></script>
+        <script src = "libraries/obj.js"></script>
+        <script src = "libraries/ship.js"></script>
         <script src = "libraries/asteroid.js"></script>
         <script src = "libraries/draw.js"></script>
         <!--<script src = "libraries/realshadow.js"></script>-->
