--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src = "libraries/Point.js"></script>
         <script src = "libraries/obj.js"></script>
         <script src = "libraries/ship.js"></script>
+        <script src = "libraries/projectile.js"></script>
         <script src = "libraries/asteroid.js"></script>
         <script src = "libraries/draw.js"></script>
         <!--<script src = "libraries/realshadow.js"></script>-->
